--- a/framework/baykeshop/templates/baykeshop/user/balance.html
+++ b/framework/baykeshop/templates/baykeshop/user/balance.html
@@ -1,20 +1,20 @@
 {% extends 'baykeshop/user/menmber.html' %}
 
-{% block menmber_title %}我的余额{% endblock %}
+{% block menmber_title %}我的餘額{% endblock %}
 
 {% block menmber %}
 <div class="box is-radiusless is-shadowless">
     <div class="columns pl-6 pr-6 pt-3">
         <div class="column">
-            <p class=" has-text-grey-light">账户可用余额</p>
+            <p class=" has-text-grey-light">帳戶可用餘額</p>
             <h1 class="is-size-4">¥ {{ request.user.baykeuser.balance }}</h1> 
         </div>
         <div class="column">
-            <p class=" has-text-grey-light">累计充值</p>
+            <p class=" has-text-grey-light">累計充值</p>
             <h1 class=" is-size-4">¥ {{ addplus }}</h1>
         </div>
         <div class="column">
-            <p class=" has-text-grey-light">累计消费</p>
+            <p class=" has-text-grey-light">累計消費</p>
             <h1 class=" is-size-4">¥ {{ minusplus }}</h1>
         </div>
     </div>
