--- a/framework/baykeshop/templates/baykeshop/user/login.html
+++ b/framework/baykeshop/templates/baykeshop/user/login.html
@@ -2,7 +2,7 @@
 
 {% load i18n %}
 
-{% block title %}登录{% endblock %}
+{% block title %}登入{% endblock %}
 
 
 {% block container %}
@@ -10,7 +10,7 @@
     <div class="is-flex is-flex-direction-column is-align-items-center is-justify-content-center" style="min-height: 800px;">
         <div class="box p-6 login-box">
             <p class="subtitle has-text-centered">
-            {% block login_title %}登录{% endblock %}
+            {% block login_title %}登入{% endblock %}
             </p>
             <h1 class="title is-size-3 has-text-centered">baykeShop</h1>
             <div class="dropdown-divider"></div>
@@ -56,12 +56,12 @@
               </div>
               <div class="field">
                 <p class="control">
-                  <a href="{% url 'baykeshop:register' %}" class="is-size-7">还没有账号？立即注册！</a>
+                  <a href="{% url 'baykeshop:register' %}" class="is-size-7">還沒有帳號？立即註冊！</a>
                 </p>
               </div>
               <div class="field">
                 <p class="control">
-                  <input class="button is-primary is-fullwidth" type="submit" value="登录">
+                  <input class="button is-primary is-fullwidth" type="submit" value="登入">
                 </p>
               </div>
             </form>
