--- a/framework/baykeshop/templates/baykeshop/article/detail.html
+++ b/framework/baykeshop/templates/baykeshop/article/detail.html
@@ -1,5 +1,6 @@
-{% extends 'baykeshop/article/list.html' %} {% block title %} {{ title }} {%
-endblock %} {% block breadcrumb %}
+{% extends 'baykeshop/article/list.html' %} {% block title %} 
+{{ title }} 
+{%endblock %} {% block breadcrumb %}
 <div class="container">
   <nav
     class="breadcrumb is-marginless mt-3 mb-3 is-small"
