--- a/framework/baykeshop/templates/baykeshop/article/cate.html
+++ b/framework/baykeshop/templates/baykeshop/article/cate.html
@@ -1,5 +1,6 @@
-{% extends 'baykeshop/article/list.html' %} {% block title %}{{ name }}{%
-endblock %} {% block breadcrumb %}
+{% extends 'baykeshop/article/list.html' %} {% block title %}
+{{ name }}
+{%endblock %} {% block breadcrumb %}
 <div class="container">
   <nav
     class="breadcrumb is-marginless mt-3 mb-3 is-small"
