--- a/framework/baykeshop/templates/baykeshop/order/list.html
+++ b/framework/baykeshop/templates/baykeshop/order/list.html
@@ -1,5 +1,7 @@
-{% extends 'baykeshop/user/menmber.html' %} {% load bayketags %} {% block
-menmber_title %}我的訂單{% endblock %} {% block menmber %}
+{% extends 'baykeshop/user/menmber.html' %} {% load bayketags %} 
+{% block menmber_title %}
+我的訂單
+{% endblock %} {% block menmber %}
 <style>
   .b-tooltip:not(:last-child) {
     margin-right: 0.5em;
