--- a/framework/baykeshop/templates/baykeshop/order/order_paymethod.html
+++ b/framework/baykeshop/templates/baykeshop/order/order_paymethod.html
@@ -1,5 +1,7 @@
-{% extends 'baykeshop/base_site.html' %} {% load i18n static bayketags %} {%
-block title %}收銀台{% endblock %} {% block breadcrumb %}
+{% extends 'baykeshop/base_site.html' %} {% load i18n static bayketags %} 
+{%block title %}
+收銀台
+{% endblock %} {% block breadcrumb %}
 <div class="container">
   <nav
     class="breadcrumb is-marginless mt-3 mb-3 is-small"
