--- a/framework/baykeshop/templates/baykeshop/user/comp/address.html
+++ b/framework/baykeshop/templates/baykeshop/user/comp/address.html
@@ -141,7 +141,7 @@
                             required>
                         </b-input>
                     </b-field>
-                    <b-field label=路/街/號" :label-position="labelPosition">
+                    <b-field label="路/街/號" :label-position="labelPosition">
                         <b-input
                             v-model="formProps.address"
                             type="text"
