--- a/framework/baykeshop/templates/baykeshop/comp/navbar copy.html
+++ b/framework/baykeshop/templates/baykeshop/comp/navbar copy.html
@@ -10,7 +10,7 @@
       <template #brand>
         <b-navbar-item tag="div">
           {% block navbar_logo %}
-          <h1 class="is-size-4 has-text-weight-medium">baykeshop</h1>
+          <h1 class="is-size-4 has-text-weight-medium">OpenShop</h1>
           {% endblock %}
         </b-navbar-item>
       </template>
@@ -21,7 +21,7 @@
           全部分類
         </b-navbar-item>
         <b-navbar-item href="{% url 'baykeshop:article-list-pc' %}">
-          商城資訊
+          論壇
         </b-navbar-item>
         {% navbar as navs %} {% for cate in navs %}
         <b-navbar-dropdown label="{{ cate.name }}">
