fix login logo and add tryread

--- a/framework/baykeshop/templates/baykeshop/product/detail.html
+++ b/framework/baykeshop/templates/baykeshop/product/detail.html
@@ -97,6 +97,14 @@
                     outlined>
                     立即購買
                 </b-button>
+                <router-link to='article/3/'>
+                    <b-button 
+                        type="is-primary" 
+                        onclick="javascript:location.href='http://127.0.0.1:8000/article/3/'"
+                        >
+                       試讀
+                    </b-button>
+                </router-link>
             </div>
             <!-- 加入购物车按钮及一键购买 -->
 
