--- a/framework/baykeshop/templates/baykeshop/user/login.html
+++ b/framework/baykeshop/templates/baykeshop/user/login.html
@@ -12,7 +12,7 @@
             <p class="subtitle has-text-centered">
             {% block login_title %}登入{% endblock %}
             </p>
-            <h1 class="title is-size-3 has-text-centered">baykeShop</h1>
+            <h1 class="title is-size-3 has-text-centered">OpenShop</h1>
             <div class="dropdown-divider"></div>
             
             {% block form %}
