修正試讀按鈕連結地址

--- a/framework/baykeshop/templates/baykeshop/product/detail.html
+++ b/framework/baykeshop/templates/baykeshop/product/detail.html
@@ -100,9 +100,8 @@
                 <router-link to='article/3/'>
                     <b-button 
                         type="is-primary" 
-                        onclick="javascript:location.href='http://127.0.0.1:8000/article/3/'"
-                        >
-                       試讀
+                        onclick="javascript:location.href='../../article/3/'"
+                        >試讀
                     </b-button>
                 </router-link>
             </div>
